# zed-mac-app

./: .gitignore  README.md  app.py  calibration.py  client.py  inference_utils.py  pipeline.py  protocol.py  requirements.txt  rerun_logger.py  server.py  zed_native.py
native/: CMakeLists.txt
native/include/: zed_capture_bridge.h
native/src/: zed_capture_bridge.cpp
